--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+    {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
     <title>{{ name }}'s WatchList</title>
+    {% endblock %}
 </head>
 
 <body>
@@ -15,15 +17,18 @@
         <img class="avatar" src="{{ url_for('static',filename='img/4444.jpg') }}" alt="头像">
         {{ name }}'s WatchList
     </h2>
-    {# 使用length过滤器获取movies变量的长度 #}
-    <p>{{ movies|length }} Titles</p>
-    <ul class="movie-list">
-        {% for movie in movies %}
-        <li>{{ movie.titel }} - {{ movie.year }}</li>
-        {% endfor %}
-    </ul>
 
-    <img class="foot" src="{{ url_for('static',filename='img/1111.jpg') }}" alt="">
+    <nav>
+        <ul>
+            <li>
+                <a href="{{ url_for('index') }}">首页</a>
+            </li>
+        </ul>
+    </nav>
+
+    {% block content %}
+
+    {% endblock %}
 
     <footer>
         <small>&copy; 2020 <a href="#">北京网络职业技术学院-人工智能学科</a></small>
