--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
-    <title>{{ name }}'s WatchList</title>
+    <title>{{ user.name }}'s WatchList</title>
     {% endblock %}
 </head>
 
 <body>
+    {% for message in get_flashed_messages() %}
+    <div class="alert">{{ message }}</div>
+    {% endfor %}
     <h2>
         <img class="avatar" src="{{ url_for('static',filename='img/4444.jpg') }}" alt="头像">
-        {{ name }}'s WatchList
+        {{ user.name }}'s WatchList
     </h2>
-
     <nav>
         <ul>
             <li>
@@ -25,13 +27,9 @@
             </li>
         </ul>
     </nav>
-
-    {% block content %}
-
-    {% endblock %}
-
+    {% block content %} {% endblock %}
     <footer>
-        <small>&copy; 2020 <a href="#">北京网络职业技术学院-人工智能学科</a></small>
+        <small>&copy; 2020 <a href="http://www.baidu.com">北京网络职业技术学院-人工智能学科</a></small>
     </footer>
 </body>
 
