--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
-    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
-    <title>{{ name }}'s WatchList</title>
-</head>
+{% block content %}
+<p>{{ movies|length }} Titles</p>
+{# 表单 #}
+<form method="POST">
+    电影名 <input type="text" name="title" autocomplete="off" required>
+    年份 <input type="text" name="year" autocomplete="off" required>
+    <input type="submit" class="btn" name="submit" value="添加">
+</form>
+<ul class="movie-list">
+    {% for movie in movies %}
+    <li>
+        {{ movie.title }} - {{ movie.year }}
+        <span class="float-right">
+            <a class="vbd"
+                href="http://v.baidu.com/v?word={{ movie.title }}&ct=301989888&rn=67&pn=0&db=0&s=0&fbl=800&ie=utf-8&oq=nnkd&f=3&rsp=0"
+                target="_blank" title="在IMDb中查找此电影">百度视频</a>
+        </span>
+        <span class="float-right">
+            <a class="btn" href="{{ url_for('edit',movie_id=movie.id) }}">编辑</a>
+        </span>
+        <span class="float-right">
+            <form class="inline-form" action="{{ url_for('delete',movie_id=movie.id) }}" method="post">
+                <input type="submit" name='delete' value="删除" onclick="return confirm('确定删除吗？')">
+            </form>
+        </span>
+    </li>
+    {% endfor %}
+</ul>
 
-<body>
-    <h2>
-        <img class="avatar" src="{{ url_for('static',filename='img/4444.jpg') }}" alt="头像">
-        {{ name }}'s WatchList
-    </h2>
-    {# 使用length过滤器获取movies变量的长度 #}
-    <p>{{ movies|length }} Titles</p>
-    <ul class="movie-list">
-        {% for movie in movies %}
-        <li>{{ movie.titel }} - {{ movie.year }}</li>
-        {% endfor %}
-    </ul>
-
-    <img class="foot" src="{{ url_for('static',filename='img/1111.jpg') }}" alt="">
-
-    <footer>
-        <small>&copy; 2020 <a href="#">北京网络职业技术学院-人工智能学科</a></small>
-    </footer>
-</body>
-
-</html>
+<img class="hulu" src="{{ url_for('static',filename='img/2222.jpg') }}" alt="">
+{% endblock %}
