--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,11 @@
             <li>
                 <a href="{{ url_for('index') }}">首页</a>
             </li>
+            <li style="float: right;">
+                <a href="{{ url_for('login') }}">登录</a>
+                <a href="{{ url_for('logout') }}">退出</a>
+                <a href="{{ url_for('settings') }}">设置</a>
+            </li>
         </ul>
     </nav>
     {% block content %} {% endblock %}
