--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -1,101 +1,76 @@
-body{
-    max-width: 800px;
+/*公共样式*/
+*{
+    margin: 0;     /*外边距*/
+    padding: 0;    /*内边距*/
+    border: 0;     /*边框*/
+}
+#center{
+    width: 80%;
     margin: auto;
     font-size:14px;
     font-family: Arial, Helvetica, sans-serif;
 }
-/* 页脚 footer */
-footer{
-    color: #888888;
-    margin-top: 15px;
-    text-align: center;
-    padding: 10px;
-}
 /* 头像 */
 .avatar{
-    width: 40px;
+    width: 60px;
+    height: 60px;
 }
 
-/* 电影列表 */
-.movie-list{
-    list-style: none;
-    padding: 0;
-    margin-bottom: 10px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),0 2px 10px 0 rgba(0, 0, 0, 0.12);
+#nav{
+    width: 100%;
+    height: 40px;
+    background-color: #554b46;
+    position: relative; /*相对*/
 }
-.movie-list li{
-    padding: 12px 24px;
-    border-bottom: 1px solid #ddd;
+#nav .nav_1{
+    width: 200px;
+    height: 40px;
+    background-color: #373737;
+    position: absolute; /*绝对*/
+    left: 8%;
+    line-height: 40px;
+    text-align: center;
 }
-.movie-list li:hover{
-    background: #f8f9fa;
+#nav .nav_1 a{
+    color: white;
+    font-size: 20px;
+    text-decoration:none;  /*去除下划线*/
+}
+#nav .nav_1:hover{
+    background-color:black;
+    transition: all 1s;
+}
+#nav .nav_2{
+    width: 570px;
+    height: 40px;
+    font-size: 20px;
+    position: absolute; /*绝对*/
+    left: 30%;
+    line-height: 40px;
+}
+#nav .nav_2 a{
+    color: white;
+    padding:7px 16px;
+    font-size: 20px;
+    text-decoration:none;  /*去除下划线*/
+    top: 5px;
+}
+#nav .nav_2 a:hover{
+    background-color:black;
+    transition: all 1s;
 }
 .hulu{
     display: block;
     margin: 0 auto;
     height: 100px;
 }
-nav ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: #333333
+#footer{
+    height:100px;
+    background-color: #cfcfcf;
+    text-align:center;
 }
-nav li {
-    float: left;
-    display: flex;
-    align-items: center
-}
-nav li a{
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 8px 12px;
-    text-decoration: none
-}
-nav li a:hover{
-    background: #111111
-}
-.float-right{
-    float: right;
-    margin: 2px 5px;
-}
-.vbd{
-    font-size: 12px;
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
-    background: #f5c518;
-    border-radius: 5px;
-    padding: 3px 5px;
-}
-
-/* 美化input标签 */
-input[type=submit] {
-    font-family: inherit;
-}
-input[type=text] {
-    border: 1px solid black;
-}
-input[name=year] {
-    width: 50px;
-}
-.btn{
-    font-size: 12px;
-    padding: 3px 5px;
-    text-decoration: none;
-    cursor: pointer;
-    background: white;
-    color: black;
-    border: 1px solid #555555;
-    border-radius: 5px;
-}
-.btn:hover{
-    text-decoration: none;
-    background: black;
-    color: white;
-    border: 1px solid black;
+.wei{
+    margin: 20px;color:#000
 }
 .alert{
     position: relative;
