--- a/watchlist/templates/edit.html
+++ b/watchlist/templates/edit.html
@@ -1,9 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
     <h3>电影编辑页面</h3>
-    <form action="" method="post">
-        电影名 <input type="text" name="title" autocomplete="off" required>
-        年份 <input type="text" name="year" autocomplete="off" required>
-        <input type="submit" class="btn" name="submit" value="更新">
+    <form class="form-horizontal" method="post">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">电影名：</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" id="inputEmail3" name="title" autocomplete="off" placeholder="username" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">年份：</label>
+            <div class="col-sm-8">
+                <input type="password" class="form-control" id="inputPassword3" name="year" autocomplete="off" placeholder="Password" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <input type="submit" class="btn btn-default" value="更新">
+            </div>
+        </div>
     </form>
 {% endblock %}
