--- a/watchlist/templates/login.html
+++ b/watchlist/templates/login.html
@@ -2,29 +2,22 @@
 
 {% block content %}
     <h3>登录页面</h3>
-    <form action="" method="post">
-        用户名<input type="text" name="username" required>
-        <br><br>
-        密码<input type="password" name="password" required>
-        <br><br>
-        <input class="btn" type="submit" name='submit' value="登录">
-    </form>
-    <form class="form-horizontal">
+    <form class="form-horizontal" method="post">
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required>
+            <label for="inputEmail3" class="col-sm-2 control-label">账号：</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" id="inputEmail3" name="username" placeholder="username" required>
             </div>
         </div>
         <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" placeholder="Password" required>
+            <label for="inputPassword3" class="col-sm-2 control-label">密码：</label>
+            <div class="col-sm-8">
+                <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password" required>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Sign in</button>
+                <input type="submit" class="btn btn-default" value="登录">
             </div>
         </div>
     </form>
