--- a/watchlist/templates/base.html
+++ b/watchlist/templates/base.html
@@ -35,13 +35,13 @@
                     <li><a href="#">暂未开发</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li style="float: right">
-                    <a class="btn btn-success" href="{{ url_for('login') }}" role="button" style="color: red">登录</a>
+                    <li>
+                    <a class="btn btn-success" href="{{ url_for('login') }}" role="button" style="color: red;display: inline">登录</a>
                     {% if current_user.is_authenticated %}
-                        <a href="{{ url_for('logout') }}">退出</a>
-                        <a href="{{ url_for('settings') }}">设置</a>
+                        <a class="btn btn-success" href="{{ url_for('logout') }} " style="display: inline">退出</a>
+                        <a class="btn btn-success" href="{{ url_for('settings') }}" style="display: inline">设置</a>
                     {% endif %}
-                </li>
+                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
