--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -23,8 +23,10 @@
                             <p>主演：XXX,XXX,XXX,XXX,XXX,XXX</p>
                             <p>
                                 {% if current_user.is_authenticated %}
-                                <a href="#" class="btn btn-primary" role="button">Button</a>
-                                <a href="#" class="btn btn-default" role="button">Button</a>
+                                <a href="{{ url_for('edit',movie_id=movie.id) }}" class="btn btn-primary" role="button">编辑</a>
+                                <form class="inline-form" action="{{ url_for('delete',movie_id=movie.id) }}" method="post">
+                                    <input class="btn" type="submit" name='delete' value="删除" onclick="return confirm('确定删除吗？')">
+                                </form>
                                 {% endif %}
                                 <span class="float-right">
                                     <a class="vbd" href="http://v.baidu.com/v?word={{ movie.title }}&ct=301989888&rn=67&pn=0&db=0&s=0&fbl=800&ie=utf-8&oq=nnkd&f=3&rsp=0"
