最后的修改

--- a/watchlist/templates/base.html
+++ b/watchlist/templates/base.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
+        <link rel="shortcut icon" href="{{ url_for('static',filename='img/favicon.ico') }}" type="image/x-icon">
         <link href="{{ url_for('static',filename='lib/bootstrap-3.3.7-dist/css/bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
         <title>{{ user.name }}'s WatchList</title>
